--- a/home.html
+++ b/home.html
@@ -8,15 +8,15 @@
 
 </head>
 
-<body>
-  <h2>Welcome to the 2020 Honors retreat NJIT.edu scavenger hunt!</h2>
-  <h2>Your first task is to find the year in which our president joined the university</h2>
-<form action="/home">
-  <label for="answer">Year:</label><br>
-  <input type="text" id="answer" name="answer" value="answer"><br>
-  <input type="submit" value="Submit">
+<body style="background-color:#ff4d4d;">
+  <h1 style="color:white;">Welcome to the 2020 Honors retreat NJIT.edu scavenger hunt!</h2>
+  <h1 style="color:white;">Your first task is to find the year in which our president joined the university</h2>
+<form action="/home",  style="color:white;" style="font-size:30px">
+  <label for="answer" style="font-size:30px">Year:</label><br>
+  <input type="text" id="answer" name="answer" value="" style="font-size:22px"><br>
+  <input type="submit" value="Submit" style="font-size:20px">
 </form> 
 
-<p>Press submit to check your answer!</p>
+<p style="color:white;" style="font-size:25px">Press submit to check your answer!</p>
 </body>
 </html>
