--- a/template.html
+++ b/template.html
@@ -8,15 +8,16 @@
 
 </head>
 
-<body>
-  <h2>||LINE1||</h2>
-  <h2>||LINE2||</h2>
-<form action="/||HEADING||">
-  <label for="answer">Answer:</label><br>
-  <input type="text" id="answer" name="answer" value="answer"><br>
-  <input type="submit" value="Submit">
+<body style="background-color:#ff4d4d;">
+  <h1 style="color:white;">||LINE1||</h2>
+  <h1 style="color:white;">||LINE2||</h2>
+<form action="/||HEADING||",  style="color:white;">
+  <label for="answer" style="font-size:30px">Year:</label><br>
+  <input type="text" id="answer" name="answer" value="" style="font-size:22px"><br>
+  <input type="submit" value="Submit" style="font-size:20px">
 </form> 
 
-<p>Press submit to check your answer!</p>
+<p style="font-size:25px; color:white">Press submit to check your answer!</p>
 </body>
 </html>
+
