--- a/winner.html
+++ b/winner.html
@@ -8,7 +8,7 @@
 
 </head>
 
-<body>
+<body style="background-color:red;">
   <h2>CONGRATS! You have finished the NJIT.edu scavernger hunt.</h2>
   <h2>Fill Out this google form to record your time: **INSERT LINK TO GOOGLE FORM**</h2>
 </body>
