--- a/winner.html
+++ b/winner.html
@@ -8,8 +8,8 @@
 
 </head>
 
-<body style="background-color:red;">
-  <h2>CONGRATS! You have finished the NJIT.edu scavernger hunt.</h2>
-  <h2>Fill Out this google form to record your time: **INSERT LINK TO GOOGLE FORM**</h2>
+<body style="background-color:#ff4d4d;">
+  <h2 style="color:white;">CONGRATS! You have finished the NJIT.edu scavernger hunt.</h2>
+  <h2 style="color:white;">Fill Out this google form to record your time: **INSERT LINK TO GOOGLE FORM**</h2>
 </body>
 </html>
