--- a/template.html
+++ b/template.html
@@ -12,7 +12,7 @@
   <h1 style="color:white;">||LINE1||</h2>
   <h1 style="color:white;">||LINE2||</h2>
 <form action="/||HEADING||",  style="color:white;">
-  <label for="answer" style="font-size:30px">Year:</label><br>
+  <label for="answer" style="font-size:30px">Answer:</label><br>
   <input type="text" id="answer" name="answer" value="" style="font-size:22px"><br>
   <input type="submit" value="Submit" style="font-size:20px">
 </form> 
