--- a/home.html
+++ b/home.html
@@ -8,8 +8,8 @@
 
 </head>
 
-<body style="background-color:#ff4d4d;">
-  <h1 style="color:white;">Welcome to the 2020 Honors retreat NJIT.edu scavenger hunt!</h2>
+<body style="background-color:#ffcccc;">
+  <h1 style="color:black;">Welcome to the 2020 Honors retreat NJIT.edu scavenger hunt!</h2>
 <h1 style="color:white;">This game can... and should... be completed using only NJIT.edu and sub-sites of NJIT.edu</h2>
     <h1 style="color:white;">Dont jump questions by modifying the URL. Dont just google every question.</h2>
 <h1 style="color:white;"> Actually learn how to use the website. It is a valuable resource.</h2>
