--- a/template.html
+++ b/template.html
@@ -8,16 +8,13 @@
 
 </head>
 
-<body style="background-color:#ff4d4d;">
-  <h1 style="color:white;">||LINE1||</h2>
-  <h1 style="color:white;">||LINE2||</h2>
-<form action="/||HEADING||",  style="color:white;">
-  <label for="answer" style="font-size:30px">Answer:</label><br>
+<body style="background-color:#ffcccc;">
+  <h1 style="color:black;">||LINE1||</h2>
+  <h1 style="color:black;">||LINE2||</h2>
+<form action="/||HEADING||",  style="color:black;">
   <input type="text" id="answer" name="answer" value="" style="font-size:22px"><br>
-  <input type="submit" value="Submit" style="font-size:20px">
+  <input type="submit" value="check answer" style="font-size:20px">
 </form> 
-
-<p style="font-size:25px; color:white">Press submit to check your answer!</p>
 </body>
 </html>
 
