--- a/home.html
+++ b/home.html
@@ -10,17 +10,17 @@
 
 <body style="background-color:#ffcccc;">
   <h1 style="color:black;">Welcome to the 2020 Honors retreat NJIT.edu scavenger hunt!</h2>
-<h1 style="color:white;">This game can... and should... be completed using only NJIT.edu and sub-sites of NJIT.edu</h2>
-    <h1 style="color:white;">Dont jump questions by modifying the URL. Dont just google every question.</h2>
-<h1 style="color:white;"> Actually learn how to use the website. It is a valuable resource.</h2>
-    <h1 style="color:white;">Oh yeah, and you should probably write down the answer to each stage... good luck :)</h2>
-          <h1 style="color:white;">Your first task is to find the year in which our president joined the university</h2>
-<form action="/home",  style="color:white;" style="font-size:30px">
+<h1 style="color:black;">This game can... and should... be completed using only NJIT.edu and sub-sites of NJIT.edu</h2>
+    <h1 style="color:black;">Dont jump questions by modifying the URL. Dont just google every question.</h2>
+<h1 style="color:black;"> Actually learn how to use the website. It is a valuable resource.</h2>
+    <h1 style="color:black;">Oh yeah, and you should probably write down the answer to each stage... good luck :)</h2>
+          <h1 style="color:black;">Your first task is to find the year in which our president joined the university</h2>
+<form action="/home",  style="color:black;" style="font-size:30px">
   <label for="answer" style="font-size:30px">Year:</label><br>
   <input type="text" id="answer" name="answer" value="" style="font-size:22px"><br>
   <input type="submit" value="Submit" style="font-size:20px">
 </form> 
 
-<p style="color:white;" style="font-size:25px">Press submit to check your answer!</p>
+<p style="color:black;" style="font-size:25px">Press submit to check your answer!</p>
 </body>
 </html>
