--- a/winner.html
+++ b/winner.html
@@ -10,6 +10,6 @@
 
 <body style="background-color:#ffcccc;">
   <h2 style="color:black;">CONGRATS! You have finished the NJIT.edu scavernger hunt.</h2>
-  <h2 style="color:black;">Fill Out this google form to record your time: **INSERT LINK TO GOOGLE FORM**</h2>
+  <h2 style="color:black;">Fill Out this google form to record your time: https://forms.gle/RruJfxbZEp9b4GTh6</h2>
 </body>
 </html>
